# swiss-covid-app

./: .gitignore  CHE_adm1.geojson  Dockerfile  README.md  je-d-21.03.02.xlsx  pyproject.toml  requirements.txt  st_rerun.py  swisscovid.py
.spyproject/config/: workspace.ini
