[tool.poetry]
name = "swiss-covid-app"
version = "0.1.0"
description = ""
authors = ["I.K. <tessier_ashpool@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
streamlit = "^0.89.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
